--- a/BangazonWorkforceManagement/appsettings.json
+++ b/BangazonWorkforceManagement/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=BangazonWorkforce;Trusted_Connection=True;"
+  }
+
 }
