--- a/BangazonWorkforceManagement/BangazonWorkforceManagement.csproj
+++ b/BangazonWorkforceManagement/BangazonWorkforceManagement.csproj
@@ -7,8 +7,10 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
 </Project>
